css tovább tanulás

--- a/02_css_basics.html
+++ b/02_css_basics.html
@@ -51,5 +51,38 @@ megkapja a style tag-ben lévő .pirosdiv összes css property-t</p>
     height: 300px;
 }
 </style>
+
+
+
+<div class="doboz sarga-doboz">Ez egy sarga doboz</div>
+<div class="doboz zold-doboz">Ez egy zöld doboz</div>
+<div id="specialis-doboz" class="doboz"> specialis doboz</div>
+
+<style>
+
+.doboz {
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+  margin: 20px;
+  color: white;
+}
+
+.sarga-doboz {
+  background-color: yellow;
+}
+.zold-doboz {
+  background-color: green;
+}
+#specialis-doboz {
+  background-color: black;
+}
+
+</style>
+
+
+
+
+
 </body>
 </html>
