--- a/index.html
+++ b/index.html
@@ -8,30 +8,24 @@
 <body>
 <header>
   <h1>Document flow</h1>
-  <h1>10.0.28.33</h1>
-    <h2>user: diak</h2>
-    <h2>pass: tanulo</h2>
-    <br>
   <h2>az alap html elemek működése</h2>
 </header>
 <main>
   <h1>Block level elemek</h1>
   <!-- comment, ezt a böngésző nem értelmezi -->
   <p>A html elemek két nagy csoportba sorolhatók</p>
-
-
   <ul>
     <li>Block level elements</li>
     <li>Inline elemts</li>
   </ul>
   <section>
     <h2>Számozott lista</h2>
-  <ol> <!-- ol>li*5 -->
+  <ol> <!-- emmetbe igy kell csinálni ol-t és 5 db LI-t tenni bele: ol>li*5 -->
     <li>bsdfsdf</li>
     <li>bsdfsdf</li>
     <li>bsdfsdf</li>
     <li>sdfsdsdf</li>
-    <li>sdfsdfsdfsdf</li>
+    <li>sdfdfsdfsdfsdf</li>
   </ol>
   </section>
   <span>ez egy inline elem</span>
@@ -39,6 +33,7 @@
     <details open>
       <summary>Ez egy summary</summary>
         Adipisicing incidunt cupiditate error quasi nulla ipsa?
+        sd;lfjsdflkjsdflksjdflksdjflksdfjsdlkfjsdlkfjsklj
         Adipisicing incidunt cupiditate error quasi nulla ipsa?
         Adipisicing incidunt cupiditate error quasi nulla ipsa?
     </details>
