css kulon file-ba, új css property-k
display, margin, padding

--- a/02_css_basics.html
+++ b/02_css_basics.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Css Alapok</title>
 </head>
 <body>
 
@@ -10,6 +10,9 @@
 
 <h1>CSS Alapok</h1>
 
+<h2>10.0.28.33</h2>
+<h2> user: diak </h2>
+<h2> jelszo: tanulo </h2>
 <p>
 1. inline style, a kovetkezo div-nek a kék betűszínt állítottuk be
 </p>
@@ -84,6 +87,7 @@ megkapja a style tag-ben lévő .pirosdiv összes css property-t</p>
 
 </style>
 
+<a href="./03_css_basics.html">Tovább a következő oldalra</a>
 
 </body>
 </html>
