--- a/03_css_basics.html
+++ b/03_css_basics.html
@@ -18,7 +18,6 @@
       <div class="menupont">harmadik menu</div>
     </div>
 
-
     <div class="al-menu">
       <div class="menupont">elso menu</div>
       <div class="menupont">masodik menu</div>
@@ -34,8 +33,18 @@
       <div>Ipsum pariatur quos reiciendis quis autem nisi? Amet mollitia ipsa numquam architecto officia facere ab nisi. Nostrum sit omnis voluptas deserunt minima? Expedita fuga explicabo tenetur hic laboriosam Obcaecati eum</div>
       <div>Sit illo odit natus aliquid praesentium? Quo natus error dolore iure quae? Facilis vel quo quia iure beatae. Vitae quae optio accusantium a architecto ratione. Quisquam ullam impedit pariatur delectus.</div>
       <div>Consectetur quibusdam consequatur a molestiae tenetur? Ipsa quas nobis officiis aliquam aut perspiciatis Suscipit vero ducimus dignissimos dolores laudantium Sit fugiat sit rem at quaerat, vero ducimus qui. Qui veniam.</div>
-    </section>
 
-  
+    <section class="fixed-doboz">Ez a doboz fixen itt van</section>
+
+<div>
+  Adipisicing facilis tempore excepturi cum animi! Facere maxime repellendus earum nisi error! Ipsam perspiciatis tempore deserunt libero architecto eligendi laudantium, soluta Quaerat porro aliquam repellendus obcaecati eligendi. Consequuntur sequi ex!
+</div>
+
+
+
+    </section> <!-- tartalom vége -->
+
+<a href="./04_css_positioning.html"> Tovább a következő oldala</a>
+
 </body>
 </html>
