--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
   <h1>Document flow</h1>
   <h2>az alap html elemek működése</h2>
 </header>
+<section>
+
+<div style="background-color: red;">
+  <h1> webprogramozáshoz ajánlott kiegészítők (pluginek, extension-ök, bővítmények): </h1>
+  <p> <strong>LINTEREK:</strong> (szintaktikai, egyéb hiba ellenőrzők) </p>
+  <p>   - csslint, htmlhint, jslint </p>
+  <p> <strong>GYORS HTML Íráshoz:</strong> </p>
+  <p>   - emmet </p>
+</div>
+
+</section>
+
+
+
 <main>
   <h1>Block level elemek</h1>
   <!-- comment, ezt a böngésző nem értelmezi -->
