--- a/04_css_positioning.html
+++ b/04_css_positioning.html
@@ -9,7 +9,8 @@
   <a href="./03_css_basics.html">Visszalépés</a>
   <h1>CSS positioning</h1>
 
-  <div class="fixed-doboz">Ez a doboz fixen itt van</div>
+  <div class="fixed-doboz">Ez a világoskék doboz fixen itt van</div>
+
   <div class="zold-doboz">Ez a doboz zöld és itt van</div>
   <div class="narancs-doboz">Ez a doboz narancssárga és itt van</div>
 
